# mysterymasc

./: .env.example  .gitignore  QUICKSTART.md  README.md  __init__.py  api_server.py  check_setup.py  docker-compose.yml  dump.rdb  main.py  pyproject.toml  requirements.txt
JarvisAlive/: .env.example  .gitignore  AUTHENTICATION_SETUP.md  Dockerfile  JARVIS_DEMO_GUIDE.md  MIGRATION_SUMMARY.md  QUICKSTART.md  QUICK_START.md  agent_inspector.py  api_server.py  auth_api_server.py  check_setup.py  container_debugger.py  debug_agent.py  debug_class_detection.py  debug_docker.py  demo_integration.py  demo_websocket_integration.py  docker-compose.yml  main.py  migrate_sessions.py  migrate_sessions_fixed.py  package.json  pyproject.toml  requirements.txt  requirements_simple.txt  run_integration_tests.py  simple_test_agent.py  test_api_imports.py  test_auth.py  test_code_gen.py  test_debug_agent.py  test_dual_mode.py  test_integration_mock.py  test_jarvis_conversation_manager.py  test_jarvis_demos.py  test_migration_examples.py  test_new_logic.py  test_sales_agents.py  test_sales_department.py  (+4 more)
JarvisAlive/agent_builder/: agent_spec.py  code_generator.py  sandbox.py
JarvisAlive/ai_engines/: __init__.py  anthropic_engine.py  base_engine.py  mock_engine.py  test_engines.py
JarvisAlive/api/: tracking_endpoints.py
JarvisAlive/conversation/: __init__.py  jarvis_conversation_manager.py  websocket_handler.py
JarvisAlive/dashboard/: README.md  __init__.py  analysis_report.md  metrics_dashboard.py  metrics_export_test_session_20250708_150641.json  test_colors.py  test_criteria.py  test_dashboard.py  test_rendering.py
JarvisAlive/database/: mock_data.py
JarvisAlive/demo_interface/: README.md  app.py  run_demo.py  test_demo.py  validate_demo_criteria.py  validate_simple.py
JarvisAlive/departments/: __init__.py  base_department.py
JarvisAlive/docs/: MIGRATION_TO_JARVIS.md  QUICK_REFERENCE.md  README.md
JarvisAlive/frontend-simple/: index.html  test_integration.py
JarvisAlive/integrations/: README_supabase_auth.md  gmail_integration.py  hubspot_integration.py  supabase_auth_manager.py  supabase_schema.sql  test_supabase_auth.py
JarvisAlive/models/: __init__.py  auth_middleware.py  auth_middleware_backup.py  user_profile.py
JarvisAlive/orchestration/: agent_communication.py  business_context.py  jarvis.py  orchestrator.py  state.py
JarvisAlive/scripts/: validate_infrastructure.py
JarvisAlive/templates/: parameter_extractor.py  template_engine.py
JarvisAlive/tests/: conftest.py  run_tests.py  (+12 more)
agent_builder/: agent_spec.py  code_generator.py  sandbox.py
conversation/: context_manager.py
orchestration/: orchestrator.py  state.py
(+34 files in other folders)
